# moneyforward-exporter

./: .gitignore  Dockerfile  Pipfile  README.md  example.env  example.prom  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  cron.yml  publish.yml  update-chrome-driver.yml
config/: metrics.yml  scraping.yml
container/example/: moneyforward.prom
modules/moneyforward/: assets.py  budgets.py  common.py  liability.py  monthly.py
