[project]
name = "moneyforward-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "fake-useragent>=2.2.0",
    "prometheus-client>=0.24.1",
    "pyotp>=2.9.0",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.3",
    "selenium>=4.42.0",
]
