[project]
name = "moneyforward-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "fake-useragent>=2.2.0",
    "prometheus-client>=0.25.0",
    "pyotp>=2.10.0",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.3",
    "selenium>=4.45.0",
]
